# budget-app

./: .gitignore  ARCHITECTURE.md  IMPLEMENTATION_SUMMARY.md  README.md  pubspec.yaml
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
lib/: main.dart
lib/models/: category.dart  transaction.dart
lib/screens/: add_edit_transaction_screen.dart  dashboard_screen.dart  settings_screen.dart  transactions_screen.dart
lib/services/: backup_service.dart  category_service.dart  database_service.dart
lib/utils/: constants.dart  helpers.dart
lib/widgets/: month_year_picker.dart  stats_card.dart  transaction_tile.dart
linux/: CMakeLists.txt  my_application.cc
linux/flutter/: CMakeLists.txt
macos/Runner/: Info.plist
test/: category_test.dart  constants_test.dart  helpers_test.dart  transaction_test.dart  widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: CMakeLists.txt  main.cpp
